# sykora

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  build.zig  build.zig.zon  launch_training.ps1  test_perft_suite.sh  tune_defaults.txt  tune_params_next.txt  uci-interface.md
.github/workflows/: ci-regression.yml  release.yml  sprt.yml
history/: .gitignore  README.md
specs/: nnue_training_spec.md  search-movegen-findings.md  syknnue4_spec.md  syknnue5_spec.md  syknnue6_spec.md  syknnue7_spec.md  syknnue8_spec.md
src/: bench.zig  bitboard.zig  evaluation.zig  fen.zig  full_threats_v1.zig  gensfen.zig  hasher.zig  interface.zig  main.zig  net.sknnue  nnue.zig  nnue_check.zig  nnue_dot.zig  option_handlers.zig  options.zig  piece.zig  search.zig  smp.zig  texel_tune.zig  tune_eval.zig  uci_command.zig  uci_error.zig  uci_parser.zig  zobrist.zig
src/board/: attacks.zig  bitboard.zig  legal_context.zig  legal_movegen.zig  legality.zig  make_unmake.zig  movegen.zig
src/search/: capture_history.zig  heuristics.zig  move_picker.zig  tt.zig
src/uci/: interface.zig  uci_command.zig  uci_error.zig  uci_parser.zig
utils/: benchmark.py  challenge_bot.py  history.py  lichess_bot.py  selfplay.py  selfplay_vs_ref.sh  sts.py  test_movegen.sh  test_perft.sh  test_perft_suite.sh  tune_loop.py  uci_wrapper.sh
utils/bench/: nps.py
utils/bot/: challenge_bot.py  lichess_bot.py
utils/data/: download_fishtest_pgns.py
utils/nnue/bullet_runner/: Cargo.toml
utils/nnue/bullet_runner/src/: full_threats_v1.rs  main.rs
(+53 files in other folders)
